--- a/manifest.json.in
+++ b/manifest.json.in
@@ -6,10 +6,16 @@
     "hooks": {
         "pesbuk": {
             "apparmor": "pesbuk/pesbuk.apparmor",
-            "desktop": "pesbuk/pesbuk.desktop"
+            "desktop": "pesbuk/pesbuk.desktop",
+            "urls": "pesbuk/app-dispatcher.json",
+            "content-hub": "pesbuk/content-hub.json"
+        },
+        "push": {
+            "apparmor": "push/push-apparmor.json",
+            "push-helper": "push/push.json"
         }
     },
-    "version": "1.0",
+    "version": "1.1",
     "maintainer": "Kugi Eusebio <kugi_igi@yahoo.com>",
     "framework": "ubuntu-sdk-16.04"
 }
