--- a/manifest.json.in
+++ b/manifest.json.in
@@ -15,7 +15,7 @@
             "push-helper": "push/push.json"
         }
     },
-    "version": "1.1",
-    "maintainer": "Kugi Eusebio <kugi_igi@yahoo.com>",
+    "version": "1.2",
+    "maintainer": "Kugi Eusebio <kugi_eusebio@protonmail.com>",
     "framework": "ubuntu-sdk-16.04"
 }
