content hub changes

--- a/pesbuk/app-dispatcher.json
+++ b/pesbuk/app-dispatcher.json
@@ -9,5 +9,9 @@
     {
         "protocol": "https",
         "domain-suffix": "m.facebook.com"
+    },
+    {
+        "protocol": "https",
+        "domain-suffix": "facebook.com"
     }
 ]
