--- a/pesbuk/pesbuk.desktop
+++ b/pesbuk/pesbuk.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 _Name=Pesbuk
-Exec=pesbuk
+Exec=pesbuk %U
 Icon=pesbuk/icon.svg
 Terminal=false
 Type=Application
-Keywords=facebook;pesbuk;social;media;social media;
+Keywords=facebook;messenger;social;media;social media;
 X-Ubuntu-Touch=true
 X-Ubuntu-Splash-Image=pesbuk/splash.svg
 X-Ubuntu-Splash-Show-Header=false
